<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>praline</groupId>
    <artifactId>Praline-Core</artifactId>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>Praline-Data-Structure</module>
        <module>Praline-IO</module>
        <module>Praline-Layouting</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <packaging>pom</packaging>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub j-zink-wuerzburg Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/j-zink-wuerzburg/praline</url>
        </repository>
    </distributionManagement>

    <build>
        <defaultGoal>package</defaultGoal>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
